--- a/webroot_files/css/style1.css
+++ b/webroot_files/css/style1.css
@@ -1692,6 +1692,9 @@ border:0px;
 #login_form input{
    padding: 12px;
    line-height:1;
+   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+   box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
 #loginButton{
