--- a/webroot_files/css/style1.css
+++ b/webroot_files/css/style1.css
@@ -1519,7 +1519,7 @@ span.ui-slider-label-b { right: -100%;  margin-left: -1px }
 }
 
 #sent .buttons a{
-    background-image: url(../img/sent_info_small.png);
+    background-image: url(../img/sent_info_small2.png);
 }
 
 #sent .buttons a:hover, a:active{  
