--- a/webroot_files/css/style1.css
+++ b/webroot_files/css/style1.css
@@ -1874,7 +1874,7 @@ a.delete_button{
 }
 
 #graph-options1, #graph-options2, #graph-options3, #graph-options4 {
-	width:40%;
+	width:90%;
 	display: inline-block;
 	margin-left: 3%;
 	margin-right: 3%;
@@ -1888,7 +1888,18 @@ a.delete_button{
 	text-align: left;
 	cursor: pointer;
 }
-
+#reset_graph_button{
+	width: 90%;
+	margin: auto;
+	}
+#graph_options_container_left{
+	width: 50%;
+	float: left;
+}
+#graph_options_container_right{
+	width: 50%;
+	float: right;
+}
 #graph-options1 .ui-btn-up-a{
 	background: #864A7F;
 	border: 1px solid #864A7F;
