somehow in the css merge this was removed

--- a/webroot_files/css/style1.css
+++ b/webroot_files/css/style1.css
@@ -1658,7 +1658,7 @@ span.ui-slider-label-b { right: -100%;  margin-left: -1px }
 	background-size: 78px 52px;
 }
 
-#question .ui-icon {
+#questions .ui-icon {
 	background: url("../img/icon_question_small.png");
 	background-size: 78px 52px;
 }
