--- a/webroot_files/css/style1.css
+++ b/webroot_files/css/style1.css
@@ -1709,9 +1709,9 @@ ul.campaign_list div.list{
 ul.campaign_list .name a {
 	font-size: 20px;
 	font-family: 'IntervalSansPro-BoldCond',Helvetica,Arial;
-	color: #00cced;
+	/*color: #00cced;*/
+	color: #404041;
 	text-decoration:none;
-	text-shadow: #000000 1px 1px;
 }
 
 ul.campaign_list .name {
