--- a/webroot_files/css/style1.css
+++ b/webroot_files/css/style1.css
@@ -1595,7 +1595,7 @@ span.ui-slider-label-b { right: -100%;  margin-left: -1px }
 }
 
 .ui-content .ui-collapsible-content{
-	background: #ffffff;
+	background: #f0f0f0;
 }
 
 .ui-content .ui-btn-hover-a{
@@ -1855,6 +1855,7 @@ padding: 0px;
 	height: 32px;
 }
 
+/*
 #campaigns_scheduled{
 	background: #f0f0f0;
 }
@@ -1866,6 +1867,7 @@ padding: 0px;
 #campaigns_sent{
 	background: #f0f0f0;
 }
+*/
 
 #campaigns_scheduled .buttons a{
 	background-image: url(../img/delete_small.png);
