--- a/webroot_files/css/style1.css
+++ b/webroot_files/css/style1.css
@@ -1779,7 +1779,7 @@ padding: 0px;
 }
 
 
-.table {
+#recent_campaigns.table {
 	font-family: 'IntervalSansPro-RegCond',Helvetica, Arial;
 	width: 100%;
 	border-collapse:collapse;
