--- a/webroot_files/css/style1.css
+++ b/webroot_files/css/style1.css
@@ -2025,7 +2025,11 @@ padding: 0px;
 }
 
 #recent-campaigns-grid {
-	padding-left: 5px;
+	width: 75%;
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
+	/* padding-left: 5px;*/
 	text-align: center;
 }
 
