--- a/webroot_files/css/style1.css
+++ b/webroot_files/css/style1.css
@@ -2062,6 +2062,12 @@ padding: 0px;
 	float: left;
 }
 
+#recent_campaigns_title {
+	display: block;
+	margin-bottom: 15px;
+	font-size: 18pt;
+}
+
 #grid-top {
 	display: inline-block;
 	width: 100%;
