--- a/webroot_files/css/style1.css
+++ b/webroot_files/css/style1.css
@@ -2064,9 +2064,10 @@ padding: 0px;
 
 #recent_campaigns_title {
 	display: block;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 	font-size: 18pt;
-	margin: 0px auto;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #grid-top {
