--- a/webroot_files/css/style1.css
+++ b/webroot_files/css/style1.css
@@ -1933,6 +1933,21 @@ padding: 0px;
 }
 
 /* REPORTS PAGE - RECENT CAMPAIGNS */
+table .name{
+	width: 33%;
+	text-align: center;
+}
+
+table .stat_1{
+	width: 33%;
+	text-align: center;
+}
+
+table .stat_2{
+	width: 33%;
+	text-align: center;
+}
+
 #recent-campaigns-list {
 	width: 98%;
 	display: block;
