--- a/webroot_files/css/style1.css
+++ b/webroot_files/css/style1.css
@@ -1933,6 +1933,10 @@ padding: 0px;
 }
 
 /* REPORTS PAGE - RECENT CAMPAIGNS */
+table {
+	width: 98%;
+}
+
 table .name{
 	width: 33%;
 	text-align: center;
