--- a/webroot_files/css/style1.css
+++ b/webroot_files/css/style1.css
@@ -2028,7 +2028,7 @@ padding: 0px;
 }
 
 #recent-campaigns-title {
-	padding-bottom: 10px;
+	padding-top: 10px;
 }
 
 #recent-campaigns-grid #recent-campaigns-grid-open, #recent-campaigns-grid #recent-campaigns-grid-clicks {
